force-app/main/default/objects/TemplateTask__c/TemplateTask__c.object-meta.xml
<CustomObject>
    <description>Create tasks specific to the Template object.</description>
    <label>Template Task</label>
    <nameField>
        <label>Template Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>