force-app/main/default/objects/TemplateTask__c/fields/TaskRequirements__c.field-meta.xml
<CustomField>
    <fullName>TaskRequirements__c</fullName>
    <description>Display the Task requirements to be completed.</description>
    <label>Task Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>