force-app/main/default/objects/TemplateTask__c/validationRules/Handle_Negative_Values_Days_to_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Handle_Negative_Values_Days_to_Complete</fullName>
    <active>true</active>
    <description>Does not allow for negative values in the Relative Days to Complete field.</description>
    <errorConditionFormula>RelativeDaystoComplete__c &lt;= 0</errorConditionFormula>
    <errorMessage>Relative Days to Complete cannot be 0 or negative.</errorMessage>
</ValidationRule>